--- a/SAM/Views/SystemAdmin/Partials/_SprayfieldsPartial.cshtml
+++ b/SAM/Views/SystemAdmin/Partials/_SprayfieldsPartial.cshtml
@@ -43,9 +43,9 @@
                     <thead>
                         <tr>
                             <th><i class="bi bi-hash"></i> Field ID</th>
-                            <th><i class="bi bi-rulers"></i> Size (acres)</th>
+                            <th><i class="bi bi-rulers"></i> Size (Wetted Acres)</th>
                             <th><i class="bi bi-droplet-half"></i> Hourly Rate (in/hr)</th>
-                            <th><i class="bi bi-droplet"></i> Annual Rate (in/yr)</th>
+                            <th><i class="bi bi-droplet"></i> Weekly Rate (in/week)</th>
                             <th><i class="bi bi-moisture"></i> Soil</th>
                             <th><i class="bi bi-flower1"></i> Crop</th>
                             <th><i class="bi bi-droplet"></i> Nozzle</th>
@@ -66,7 +66,7 @@
                                 </td>
                                 <td>@sprayfield.SizeAcres.ToString("F2")</td>
                                 <td>@(sprayfield.HourlyRateInches?.ToString("F2") ?? "-")</td>
-                                <td>@(sprayfield.AnnualRateInches?.ToString("F2") ?? "-")</td>
+                                <td>@(sprayfield.WeeklyRateInches?.ToString("F2") ?? "-")</td>
                                 <td>@sprayfield.SoilName</td>
                                 <td>@sprayfield.CropName</td>
                                 <td>@sprayfield.NozzleName</td>
@@ -112,14 +112,14 @@
                             <div class="card-body d-flex flex-column">
 
                                 <dl class="row small mb-3">
-                                    <dt class="col-6"><i class="bi bi-rulers me-1"></i>Size</dt>
+                                    <dt class="col-6"><i class="bi bi-rulers me-1"></i>Size (Wetted Acres)</dt>
                                     <dd class="col-6 mb-1">@sprayfield.SizeAcres.ToString("F2") acres</dd>
 
                                     <dt class="col-6"><i class="bi bi-droplet-half me-1"></i>Hourly Rate</dt>
                                     <dd class="col-6 mb-1">@((sprayfield.HourlyRateInches?.ToString("F2") ?? "-")) in/hr</dd>
 
-                                    <dt class="col-6"><i class="bi bi-droplet me-1"></i>Annual Rate</dt>
-                                    <dd class="col-6 mb-1">@((sprayfield.AnnualRateInches?.ToString("F2") ?? "-")) in/yr</dd>
+                                    <dt class="col-6"><i class="bi bi-droplet me-1"></i>Weekly Rate</dt>
+                                    <dd class="col-6 mb-1">@((sprayfield.WeeklyRateInches?.ToString("F2") ?? "-")) in/week</dd>
 
                                     <dt class="col-6"><i class="bi bi-moisture me-1"></i>Soil</dt>
                                     <dd class="col-6 mb-1">@sprayfield.SoilName</dd>
